26/09/14 -*- Version 1.1.0 -*-

05/04/14 Julien Dutheil
* Added ML model fit (stationary and non-stationary).

25/07/13 -*- Version 1.0.0 -*-

15/01/2010 Julien Dutheil
* Initial version.